Se incluye conexiones a localhost en application.properties

--- a/portfolio/src/main/resources/application.properties
+++ b/portfolio/src/main/resources/application.properties
@@ -4,3 +4,9 @@ MYSQL_ADDON_USER=uqwbfmnielrr4m3h
 MYSQL_ADDON_PORT=3306
 MYSQL_ADDON_PASSWORD=vO7SJoiAMs2QFXwULy5I 
 MYSQL_ADDON_URI=mysql://uqwbfmnielrr4m3h:vO7SJoiAMs2QFXwULy5I@bagfevjhzisixb3hgpqf-mysql.services.clever-cloud.com:3306/bagfevjhzisixb3hgpqf
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/portfoliodb?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
