--- a/portfolio/src/main/resources/application.properties
+++ b/portfolio/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://uqwbfmnielrr4m3h:vO7SJoiAMs2QFXwULy5I@bagfevjhzisixb3hgpqf-mysql.services.clever-cloud.com:3306/bagfevjhzisixb3hgpqf
 spring.datasource.username=uqwbfmnielrr4m3h
 spring.datasource.password=vO7SJoiAMs2QFXwULy5I
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL
