--- a/portfolio/src/main/resources/application.properties
+++ b/portfolio/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://uqwbfmnielrr4m3h:vO7SJoiAMs2QFXwULy5I@bagfevjhzisixb3hgpqf-mysql.services.clever-cloud.com:3306/bagfevjhzisixb3hgpqf?useSSL=false&serverTimezone=UTC
-spring.datasource.username=uqwbfmnielrr4m3h
-spring.datasource.password=vO7SJoiAMs2QFXwULy5I
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+MYSQL_ADDON_HOST=bagfevjhzisixb3hgpqf-mysql.services.clever-cloud.com
+MYSQL_ADDON_DB=bagfevjhzisixb3hgpqf
+MYSQL_ADDON_USER=uqwbfmnielrr4m3h
+MYSQL_ADDON_PORT=3306
+MYSQL_ADDON_PASSWORD=vO7SJoiAMs2QFXwULy5I 
+MYSQL_ADDON_URI=mysql://uqwbfmnielrr4m3h:vO7SJoiAMs2QFXwULy5I@bagfevjhzisixb3hgpqf-mysql.services.clever-cloud.com:3306/bagfevjhzisixb3hgpqf
