--- a/portfolio/src/main/resources/application.properties
+++ b/portfolio/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://uqwbfmnielrr4m3h:vO7SJoiAMs2QFXwULy5I@bagfevjhzisixb3hgpqf-mysql.services.clever-cloud.com:3306/bagfevjhzisixb3hgpqf
+spring.datasource.url=jdbc:mysql://uqwbfmnielrr4m3h:Tfter3qsmTr5fihnYgE8@bagfevjhzisixb3hgpqf-mysql.services.clever-cloud.com:3306/bagfevjhzisixb3hgpqf
 spring.datasource.username=uqwbfmnielrr4m3h
 spring.datasource.password=Tfter3qsmTr5fihnYgE8 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
