--- a/portfolio/src/main/resources/application.properties
+++ b/portfolio/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://uqwbfmnielrr4m3h:Tfter3qsmTr5fihnYgE8@bagfevjhzisixb3hgpqf-mysql.services.clever-cloud.com:3306/bagfevjhzisixb3hgpqf
 spring.datasource.username=uqwbfmnielrr4m3h
 spring.datasource.password=Tfter3qsmTr5fihnYgE8 
